# bytesense

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: cn_official_manifest.json  conftest.py  hard_scenarios.py  test_bench_detection.py  test_hard_scenarios.py
docs/: api.md  benchmarks.md  changelog.md  examples.md  index.md  quickstart.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
examples/: README.md  basic_detect.py  chardet_compat.py  http_hints.py  multi_encoding.py  repair_mojibake.py  streaming.py
rust/: Cargo.toml
rust/src/: histogram.rs  lib.rs  utf8.rs
scripts/: build_fingerprints.py  compare_libraries.sh  fetch_cn_benchmark_samples.py  run_all_benchmarks.sh  upload_pypi.sh  upload_testpypi.sh
src/bytesense/: __init__.py  _rust.py  api.py  candidate.py  cli.py  coherence.py  constant.py  fingerprint.py  heuristics.py  hints.py  legacy.py  mess.py  models.py  multi.py  repair.py  streaming.py  version.py
src/bytesense/data/: fingerprints.py
tests/: conftest.py  test_api.py  test_api_extra.py  test_api_helpers.py  test_candidate.py  test_cli.py  test_coherence.py  test_fingerprint.py  test_heuristics_extra.py  test_hints.py  test_hints_extra.py  test_legacy.py  test_mess.py  test_mess_extra.py  test_multi.py  test_repair.py  test_rust.py  test_rust_layer.py  test_streaming.py  test_streaming_v2.py
