[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "bytesense"
version = "0.1.0"
description = "Fast, accurate charset/encoding detection. Zero ML. Zero dependencies. Optional Rust acceleration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "Oğuzhan Kır", email = "oguzhan@example.com" },
]
maintainers = [
  { name = "Oğuzhan Kır", email = "oguzhan@example.com" },
]
keywords = [
  "encoding",
  "charset",
  "detection",
  "unicode",
  "bytes",
  "chardet",
  "charset-normalizer",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Native acceleration is in platform wheels built with maturin; no extra Python deps to list here.
fast = []
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
  "mypy>=1.8",
  "ruff>=0.4",
  "maturin>=1.4",
  "charset-normalizer>=3.3",
  "chardet>=5.0",
  "requests>=2.31",
  "certifi>=2023.0",
]

[project.scripts]
bytesense = "bytesense.cli:main"

[project.urls]
Homepage    = "https://github.com/oguzhankir/bytesense"
Repository  = "https://github.com/oguzhankir/bytesense"
Issues      = "https://github.com/oguzhankir/bytesense/issues"
Changelog   = "https://github.com/oguzhankir/bytesense/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name   = "bytesense._rust_core"
features      = ["pyo3/extension-module"]

[tool.ruff]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.8"
strict              = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "bytesense._rust"
ignore_errors = true

[[tool.mypy.overrides]]
module = "bytesense.fingerprint"
disable_error_code = ["type-arg", "no-any-return"]

[[tool.mypy.overrides]]
module = "bytesense.candidate"
disable_error_code = ["type-arg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", ".ruff_cache", ".mypy_cache", "rust", "dist", "build", "htmlcov"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["bytesense"]
omit = ["*/data/fingerprints.py"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "except ImportError",
  "raise NotImplementedError",
  "@overload",
]
