[package]
name    = "bytesense-core"
version = "0.1.2"
edition = "2021"

[lib]
name       = "bytesense_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
